# Backend

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  predictions.db  pyproject.toml  requirements.txt
api/: router.py
api/endpoints/: admin.py  diagnosis.py  diseases.py  post.py  skintype.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
crud/: post.py
database/: database.py
models/: __init__.py  diagnosis.py  diseases.py  post.py  skintype.py  symptom.py  user.py
post/: urls.py  views.py
schema/: ResultResponseModel.py  diagnosis.py  diseases.py  post.py  skintype.py
services/: diagnosis.py  diseases.py  skintype.py
